2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdbool'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdbool'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `inline'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `inline'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib to define `RCS_UNUSED'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `unused-parameter'.
	* configure.ac (unused): Delete RCS_CHECK_GCC_ATTRIBUTE.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add gnulib infrastructure (but don't use it yet).

	* m4/gnulib-cache.m4: New file, from "gnulib-tool --import".
	* autogen.sh: Use gnulib-tool.
	* configure.ac (gl_EARLY, gl_INIT): New.
	(AC_PROG_RANLIB): Delete.
	(AC_CONFIG_FILES): Add lib/Makefile.
	* Makefile.am (SUBDIRS): Add lib.
	(EXTRA_DIST): Add m4/gnulib-cache.m4.
	(ACLOCAL_AM_FLAGS): New var.

2010-03-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use GNU Automake.

	* doc/Makefile.am: New file.
	* doc/Makefile.in: Delete file.
	* THANKS: New file.
	* AUTHORS, NEWS: Update.
	* Makefile.am: New file.
	* configure.ac (AM_INIT_AUTOMAKE, AC_PROG_RANLIB): New.
	* INSTALL: Delete file.
	* Makefile.in: Delete file.
	* build-aux/install-sh: Delete file.
	* build-aux/mkinstalldirs: Delete file.

2010-03-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Add support for doing a pretest release.

	* README-alpha: New file.
	* Makefile.in (dist): If pretest version, distribute README-alpha.
	* configure.ac: Bump version down to 5.7.40.
	(pretest_p): New var.
	(RCS_YESP, RCS_ALL): New AC_DEFUNs.
	(RCS_PRETEST): New AC_ARG_VAR; if not set appropriately for
	a pretest version, display a warning and exit failurefully.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): New AC_DEFUN; for a pretest
	version, if all the vars named do not have value `yes', issue a
	warning about the platform possibly being desupported in the future.

2010-03-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
